# london-datastore-ckan-docker

./: .env  Makefile  build-image.sh  docker-compose.dev.yml
.github/workflows/: deploy-ckan.yml
ckan/: .env.local  .env.server  Dockerfile  Makefile
ckan/setup/: install_extensions.sh
deploy/ansible/: Pipfile  ansible-key.gpg  ckan_dev.gcp.yml  deploy-ckan.yml
nginx/setup/: default.conf
src/ckanext-gla_theme/: MANIFEST.in  README.md  setup.cfg  test.ini
src/ckanext-gla_theme/.github/workflows/: test.yml
src/ckanext-gla_theme/ckanext/gla_theme/: plugin.py
src/ckanext-gla_theme/ckanext/gla_theme/assets/: script.js  webassets.yml
src/ckanext-gla_theme/ckanext/gla_theme/public/: gla_theme.css
src/ckanext-gla_theme/ckanext/gla_theme/templates/: base.html  footer.html  header.html
src/ckanext-gla_theme/ckanext/gla_theme/templates/home/: layout3.html
src/ckanext-gla_theme/ckanext/gla_theme/templates/home/snippets/: about_text.html  search.html
src/ckanext-gla_theme/ckanext/gla_theme/tests/: test_plugin.py
